add animation and add design

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -14,6 +14,10 @@
         "softwareSkills": "Software Skills",
         "khmer": "Khmer",
         "english": "English",
-        "vietnamese": "Vietnamese"
+        "vietnamese": "Vietnamese",
+        "native": "Native",
+        "businessFluent": "Business Fluent",
+        "proficient": "Proficient",
+        "intermediate": "Intermediate"
     }
 }
