--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -2,7 +2,7 @@
     "home": {
         "home": "Accueil",
         "profile": "Profil",
-        "projects": "Projects",
+        "projects": "Projets",
         "languages": "Langues",
         "moreDetails": "Plus de détails"
     },
